--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
+  http:
+  flutter_spinkit: "^4.1.2"
+  shared_preferences: "^0.5.7+3"
+  flutter_markdown: "0.4.2"
 
 dev_dependencies:
   flutter_test:
